```csharp
using AIService.Domain.Enums;
using AIService.Domain.Interfaces;
using AIService.Domain.Models;
using Microsoft.Extensions.Logging;
using System;
using System.Collections.Generic;
using System.IO;
using System.Linq;
using System.Threading.Tasks;
// Using TensorFlow.NET. Placeholder for actual TensorFlow.NET usage.
// Actual package might be TensorFlow.NET or SciSharp.TensorFlow.Redist
// This requires a more specific setup (Python environment sometimes, native binaries)
// For TFLite, specific TFLite .NET bindings would be needed.
using Tensorflow; // Assuming this is the main namespace for TensorFlow.NET
using Tensorflow.Keras.Engine; // For Model/Functional if loading Keras models

namespace AIService.Infrastructure.AI.TensorFlow
{
    public class TensorFlowExecutionEngine : IModelExecutionEngine
    {
        private readonly ILogger<TensorFlowExecutionEngine> _logger;
        private IModel _tfModel; // Or Session for older TF1 graph-based models
        private AiModel _modelDetails;
        // For TFLite: private Interpreter _tfliteInterpreter;

        public TensorFlowExecutionEngine(ILogger<TensorFlowExecutionEngine> logger)
        {
            _logger = logger ?? throw new ArgumentNullException(nameof(logger));
        }

        public ModelFormat HandledFormat => ModelFormat.TensorFlow; // Could also handle TensorFlowLite

        public bool CanHandle(ModelFormat format) => format == ModelFormat.TensorFlow || format == ModelFormat.TensorFlowLite;

        public async Task LoadModelAsync(AiModel model, Stream modelStream)
        {
            if (model == null)
                throw new ArgumentNullException(nameof(model));
            if (modelStream == null) // TensorFlow.NET typically loads from a directory path
                throw new ArgumentNullException(nameof(modelStream) + " TensorFlow typically loads from a directory. Stream loading needs custom handling or saving to temp path.");

            _modelDetails = model;

            // TensorFlow.NET model loading usually expects a path to a SavedModel directory.
            // If modelStream is a .zip of SavedModel, it needs to be extracted to a temporary directory first.
            // If it's a .pb file (frozen graph), loading is different.
            // If it's TFLite (.tflite file), loading is also different.

            // This is a placeholder path. In reality, you'd save the stream to a temp location
            // and structure it as TensorFlow expects (e.g., a SavedModel directory).
            string tempModelPath = Path.Combine(Path.GetTempPath(), Guid.NewGuid().ToString());
            Directory.CreateDirectory(tempModelPath); 
            // Assuming modelStream is a zip file containing SavedModel structure:
            // e.g., saved_model.pb, variables/
            // Code to extract modelStream to tempModelPath would be here.
            // For simplicity, let's assume modelStream represents the path to the saved model directory for now,
            // or the ModelFileLoader gives a directory path. This is not ideal with the Stream signature.
            // The ModelFileLoader should ideally provide a file path after downloading/extracting.
            // Let's assume `model.StorageReference` contains the actual path after ModelFileLoader.
            
            var actualModelPath = model.StorageReference; // This should be set by the caller or ModelFileLoader
             if (!Directory.Exists(actualModelPath) && !File.Exists(actualModelPath))
            {
                _logger.LogError($"TensorFlow model path '{actualModelPath}' not found. Stream based loading to a path needs implementation.");
                 // Fallback: try to save stream to a temp file/dir if `actualModelPath` is not usable
                if(modelStream.CanSeek) modelStream.Seek(0, SeekOrigin.Begin);
                var tempFilePath = Path.Combine(Path.GetTempPath(), model.Name + "_" + model.Version + (model.ModelFormat == ModelFormat.TensorFlowLite ? ".tflite" : ".pb_or_dir"));
                using(var fs = new FileStream(tempFilePath, FileMode.Create, FileAccess.Write))
                {
                    await modelStream.CopyToAsync(fs);
                }
                actualModelPath = tempFilePath; // This is still problematic if it's a dir
                _logger.LogWarning($"Saved model stream to temporary path: {actualModelPath}. This path might need to be a directory for SavedModel.");

            }


            _logger.LogInformation("Loading TensorFlow model {ModelName} version {ModelVersion} from {Path}.", model.Name, model.Version, actualModelPath);
            try
            {
                if (model.ModelFormat == ModelFormat.TensorFlowLite)
                {
                    // Example for TFLite - Requires a TFLite .NET wrapper
                    // _tfliteInterpreter = new Interpreter(actualModelPath_or_modelBytes);
                    // _tfliteInterpreter.AllocateTensors();
                    _logger.LogWarning("TFLite execution via TensorFlow.NET is illustrative and may require specific TFLite bindings.");
                    // For this example, we'll assume TensorFlow.NET can handle it or it's not the primary path
                    throw new NotImplementedException("TFLite loading requires a specific .NET TFLite interpreter library.");
                }
                else // Assuming SavedModel format
                {
                    // This depends heavily on the TensorFlow.NET API version and model type (Keras, Estimator, raw graph)
                    // For Keras SavedModel:
                    // _tfModel = Tensorflow.Keras.Models.load_model(actualModelPath);
                    
                    // For generic SavedModel (TF2):
                    // var loaded = Tensorflow.SavedModel.load(actualModelPath);
                    // _tfModel = loaded; // 'loaded' might be a different type, like ConcreteFunction
                    
                    // For TF1 Session/Graph based:
                    // var graph = new Graph();
                    // graph.Import(actualModelPath); // if it's a frozen .pb file
                    // _session = new Session(graph);

                    _logger.LogWarning("TensorFlow.NET model loading is highly dependent on model format (SavedModel, Keras, frozen graph) and TF.NET API. This is a placeholder.");
                    // This is a conceptual placeholder.
                    // _tfModel = SomeTensorFlowModelLoader.Load(actualModelPath);
                    throw new NotImplementedException("Actual TensorFlow.NET model loading (SavedModel, Keras, etc.) needs specific implementation based on TensorFlow.NET API version.");
                }
                _logger.LogInformation("TensorFlow model {ModelName} version {ModelVersion} loaded conceptually.", model.Name, model.Version);
            }
            catch (Exception ex)
            {
                _logger.LogError(ex, "Error loading TensorFlow model {ModelName} version {ModelVersion}.", model.Name, model.Version);
                throw;
            }
        }

        public Task<ModelOutput> ExecuteAsync(ModelInput input)
        {
            if ((_tfModel == null /* && _session == null && _tfliteInterpreter == null */)) // Check based on what's loaded
            {
                _logger.LogError("TensorFlow model is not loaded. Call LoadModelAsync first.");
                throw new InvalidOperationException("Model is not loaded.");
            }
            if (input == null)
                throw new ArgumentNullException(nameof(input));

            _logger.LogDebug("Executing TensorFlow model {ModelName} version {ModelVersion}.", _modelDetails.Name, _modelDetails.Version);

            try
            {
                var outputData = new Dictionary<string, object>();
                
                // Input preparation: Convert ModelInput.Features to Tensors
                // This is highly dependent on ModelInput structure and model's expected input signatures.
                // AiModel.InputSchema should guide this.
                // Example:
                // var tensors = new Dictionary<string, Tensor>();
                // foreach (var feature in input.Features)
                // {
                //     // Convert feature.Value to Tensor (e.g., new Tensor(floatArray), new Tensor(intArray))
                //     // Handle shapes and types based on InputSchema
                //     tensors[feature.Key] = CreateTensorFromFeature(feature.Value, _modelDetails.InputSchema, feature.Key);
                // }

                // Execution:
                if (_modelDetails.ModelFormat == ModelFormat.TensorFlowLite)
                {
                    // _tfliteInterpreter.SetTensor(inputTensorIndex, inputData);
                    // _tfliteInterpreter.Invoke();
                    // var output = _tfliteInterpreter.GetTensor(outputTensorIndex);
                    // Convert output tensor to .NET type
                    _logger.LogWarning("TFLite execution via TensorFlow.NET is illustrative.");
                    throw new NotImplementedException("TFLite execution needs specific TFLite bindings.");
                }
                else if (_tfModel != null) // Assuming Keras-like model or TF2 ConcreteFunction
                {
                    // var result = _tfModel.predict(preparedInputs); // or _tfModel.Apply(preparedInputs)
                    // if result is a Tensor or list/dict of Tensors:
                    // foreach (var item in result) { outputData[itemName] = ConvertTensorToDotNetType(item); }
                    _logger.LogWarning("TensorFlow.NET Keras/TF2 model execution placeholder.");
                    throw new NotImplementedException("Actual TensorFlow.NET model execution needs specific implementation.");
                }
                // else if (_session != null) // TF1 style
                // {
                //     var runner = _session.GetRunner();
                //     foreach(var tensorPair in tensors) runner.AddInput(graph.OperationByName(tensorPair.Key), tensorPair.Value);
                //     // foreach(var outputName in outputNames) runner.Fetch(graph.OperationByName(outputName));
                //     var results = runner.Run(); // Returns NDArray[] or similar
                //     // Convert results to outputData
                // }


                var modelOutput = new ModelOutput { Predictions = outputData };
                _logger.LogDebug("TensorFlow model execution completed conceptually.");
                return Task.FromResult(modelOutput);
            }
            catch (Exception ex)
            {
                _logger.LogError(ex, "Error executing TensorFlow model {ModelName} version {ModelVersion}.", _modelDetails.Name, _modelDetails.Version);
                throw;
            }
        }
        
        public void Dispose()
        {
            // Dispose TensorFlow resources if necessary
            // (_tfModel as IDisposable)?.Dispose();
            // _session?.Dispose();
            // _tfliteInterpreter?.Dispose();
            _logger.LogInformation("TensorFlowExecutionEngine Dispose called.");
        }
    }
}